[package]
name = "tinymt"
version = "1.0.2"
authors = ["Torao Takami <koiroha@gmail.com>"]
edition = "2018"
repository = "https://github.com/torao/tinymt"
keywords = ["prng", "mersennetwister", "mt", "tinymt", "random"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "Rust implementation for TinyMT 64/32 -- Mersenne Twister PRNGs with Lightweight Footprint"
documentation = "https://github.com/torao/tinymt"

[badges]
circle-ci = { repository = "torao/tinymt", branch = "master" }
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
