[package]
name = "tinymt"
version = "1.0.6"
authors = ["Torao Takami <koiroha@gmail.com>"]
edition = "2018"
repository = "https://github.com/torao/tinymt"
keywords = ["prng", "mersennetwister", "mt", "tinymt", "random"]
license = "MIT"
readme = "README.md"
description = "Rust implementation of TinyMT 64/32 - a lightweight variant of Mersenne Twister PRNG"
documentation = "https://docs.rs/tinymt"

[badges]
circle-ci = { repository = "torao/tinymt", branch = "master" }
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
