[package]
name = "tinymt"
version = "1.0.8"
authors = ["Torao Takami <koiroha@gmail.com>"]
edition = "2021"
repository = "https://github.com/torao/tinymt"
keywords = ["prng", "mersennetwister", "mt", "tinymt", "random"]
license = "MIT"
readme = "README.md"
description = "Rust implementation of TinyMT 64/32 - a lightweight variant of Mersenne Twister PRNG"
documentation = "https://docs.rs/tinymt"
members = ["cli"]

[badges]
circle-ci = { repository = "torao/tinymt", branch = "master" }
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }

[target.'cfg(not(any(target_family="windows",target_family="wasm")))'.dev-dependencies]
pprof = { version = "0.11", features = ["flamegraph"] }
